<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_add_note"
        android:title="@string/mitem_add_note"
        android:icon="@drawable/ic_addicon"
        app:showAsAction="always"/>
    <item
        android:id="@+id/item_open_note_list"
        android:title="@string/mitem_open_note_list"
        android:icon="@drawable/ic_listicon"
        app:showAsAction="always"/>
    <item
        android:id="@+id/item_save_note"
        android:title="@string/mitem_save_note"
        android:icon="@drawable/ic_saveicon"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/item_delete_note"
        android:title="@string/mitem_del_note"
        android:icon="@drawable/ic_trashicon"
        app:showAsAction="always"/>
</menu>
