<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00BCD4"
    tools:context=".OptionsActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="23dp"
        android:text="@string/application_language"
        app:layout_constraintBottom_toTopOf="@+id/languageRG"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/languageRG"
        android:layout_width="163dp"
        android:layout_height="0dp"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="27dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/englishRB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/english" />

        <RadioButton
            android:id="@+id/arabicRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arabic" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="18dp"
        android:text="@string/application_theme"
        app:layout_constraintBottom_toTopOf="@+id/darkThemeToggleButton"
        app:layout_constraintStart_toStartOf="@+id/darkThemeToggleButton"
        app:layout_constraintTop_toBottomOf="@+id/languageRG" />

    <Switch
        android:id="@+id/notificationsSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="368dp"
        android:text="@string/notification_status"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/darkThemeToggleButton"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="38dp"
        android:text="@string/application_notifications"
        app:layout_constraintBottom_toTopOf="@+id/notificationsSwitch"
        app:layout_constraintStart_toStartOf="@+id/darkThemeToggleButton"
        app:layout_constraintTop_toBottomOf="@+id/darkThemeToggleButton" />

    <ToggleButton
        android:id="@+id/darkThemeToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        android:text="@string/dark_theme"
        android:textOff="@string/dark_theme_off"
        android:textOn="@string/dark_theme_on"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>